test/corpus/examples.txt
==================
Example 1
==================

module default {
    type Movie {
        required title: str;
    }
}

---

(source_file
  (module
    (identifier)
    (schema_declarations
      (object_type
        (identifier)
        (declarations
          (property
            (modifier)
            (identifier)
            (type)))))))
